# rush

./: .gitignore  Cargo.toml  README.md  flake.nix  temp.txt
.gitea/workflows/: test.yaml
.zed/: debug.json
rush_macro/: Cargo.toml
rush_macro/src/: lib.rs
rush_macro/src/utils/: canextractstate.rs  extractidents.rs  extractstate.rs  instruction.rs  instructionlist.rs  mod.rs  varfunc.rs
rush_macro/tests/: extractidents_test.rs  var_func_test.rs
scripts/: instruction_list.py
src/: lib.rs  main.rs
src/gp/: args.rs  genome.rs  individual.rs  mod.rs  selection.rs  simplification.rs  utils.rs  variation.rs
src/instructions/: code.rs  common.rs  list.rs  logical.rs  mod.rs  numeric.rs  utils.rs  vector.rs
src/push/: interpreter.rs  mod.rs  state.rs  utils.rs
tests/: display_test.rs  error_function_test.rs  extractstate_test.rs  instruction_test.rs  simplification_test.rs
