[package]
name = "rush"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.1"
paste = "1.0.15"
rust_decimal = { version = "1.37", features = ["macros", "maths"] }
rush_macro = { path = "rush_macro" }
polars = { version = "0.46.0", features = ["lazy"] }
num-traits = { version = "0.2.19" }
pyo3 = { version = "0.26.0", features = [ "auto-initialize" ] }
